<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitnessTrainer</string>
    <string name="language_ko">한국어</string>
    <string name="language_en">English</string>
    <string name="string_fitness_top_bar_right_button">홈</string>
    <string name="string_fitness_intro_login">로그인</string>
    <string name="string_fitness_intro_sign_up">회원가입</string>
    <string name="string_fitness_intro_sign_up_button">회원가입</string>
    <string name="string_fitness_my_info_button">수정</string>
    <string name="string_fitness_intro_save_password">로그인 상태 유지</string>
    <string name="string_fitness_intro_login_password_hint">비밀번호</string>
    <string name="string_fitness_intro_login_wrong_password">비밀번호가 잘못되었습니다.</string>
    <string name="string_fitness_find_password_title">비밀번호 찾기</string>
    <string name="string_fitness_find_password_no_user">등록된 사용자가 없습니다.</string>
    <string name="string_fitness_sign_up_title">회원가입</string>
    <string name="string_fitness_sign_up_not_validate">사용자 정보가 누락되었습니다.</string>
    <string name="string_fitness_sign_up_hint_email">이메일</string>
    <string name="string_fitness_sign_up_hint_password">비밀번호</string>
    <string name="string_fitness_sign_up_hint_password2">비밀번호 확인</string>
    <string name="string_fitness_sign_up_hint_name">이름</string>
    <string name="string_fitness_sign_up_hint_birthday">생년월일</string>
    <string name="string_fitness_sign_up_hint_man">남자</string>
    <string name="string_fitness_sign_up_hint_women">여자</string>
    <string name="string_fitness_sign_up_hint_height">키</string>
    <string name="string_fitness_sign_up_hint_weight">몸무게</string>
    <string name="string_fitness_sign_up_man">남자</string>
    <string name="string_fitness_sign_up_women">여자</string>
    <string name="string_fitness_sign_up_exist_email">이미 등록된 메일입니다.</string>
    <string name="string_fitness_sign">비밀번호 찾기</string>
    <string name="string_fitness_connection_unknown">알수없음</string>
    <string name="string_fitness_connection_connecting">연결중입니다.....</string>
    <string name="string_fitness_connection_connection_fail">연결에 실패하였습니다. 디바이스를 활성화 하세요.</string>
    <string name="string_fitness_connection_disconnecting">연결해제중입니다.....</string>
    <string name="string_fitness_main_title">S Fitness</string>
    <string name="string_fitness_main_graph_donut_progress">실시간 심박수</string>
    <string name="string_fitness_main_graph_line">그래프</string>
    <string name="string_fitness_main_message_none">연결된 기기가 없습니다\r\n기기를 연결해주세요</string>
    <string name="string_fitness_main_message_no_stable_heartrate">보름 동안의 심박수가 없습니다\r\n안정 심박수를 측정해 주세요</string>
    <string name="string_fitness_main_message_warm_up_exeed_aim">준비운동이 필요합니다\r\n천천히 운동하세요</string>
    <string name="string_fitness_main_message_warm_up_need">준비운동이 필요합니다</string>
    <string name="string_fitness_main_message_warm_up_complete">준비운동을 완료하였습니다</string>
    <string name="string_fitness_main_message_short_aim">목표강도를 미달 중입니다\r\n더 힘내세요</string>
    <string name="string_fitness_main_message_exceed_aim">목표강도를 초과하였습니다\r\n천천히 운동하세요</string>
    <string name="string_fitness_main_message_achieve_aim">목표강도를 달성 중 입니다\r\n운동을 유지하세요</string>
    <string name="string_fitness_main_message_fall">낙상이 발생하였습니다</string>
    <string name="string_fitness_main_range_heartrate">심박수</string>
    <string name="string_fitness_main_range_calorie">칼로리</string>
    <string name="string_fitness_main_range_skin_temperature">피부온도</string>
    <string name="string_fitness_main_range_aim">목표강도</string>
    <string name="string_fitness_main_range_no_value">-</string>
    <string name="string_fitness_main_range_aim_high">고강</string>
    <string name="string_fitness_main_range_aim_common">강</string>
    <string name="string_fitness_main_range_aim_start">중</string>
    <string name="string_fitness_main_range_aim_ready">약</string>
    <string name="string_fitness_aim_manager_title">목표관리</string>
    <string name="string_fitness_aim_manager_subtitle_heartrate">안정 심박 측정</string>
    <string name="string_fitness_aim_manager_subtitle_aim">운동 강도 설정</string>
    <string name="string_fitness_aim_manager_current_heartrate">현재 안정 심박 : </string>
    <string name="string_fitness_aim_manager_current_stable_heartrate">측정중 입니다</string>
    <string name="string_fitness_aim_manager_ready_stable_heartrate">심박이 안정된 상태에서 측정을 눌러주세요</string>
    <string name="string_fitness_aim_manager_complete_stable_heartrate">측정 안정 심박수 : </string>
    <string name="string_fitness_aim_manager_stable_start_button">측정</string>
    <string name="string_fitness_aim_manager_stable_cancel_button">취소</string>
    <string name="string_fitness_aim_manager_complete_button">완료</string>
    <string name="string_fitness_calendar_title">운동달력</string>
    <string name="string_fitness_calendar_day_of_week_sunday">일</string>
    <string name="string_fitness_calendar_day_of_week_monday">월</string>
    <string name="string_fitness_calendar_day_of_week_tuesday">화</string>
    <string name="string_fitness_calendar_day_of_week_wednesday">수</string>
    <string name="string_fitness_calendar_day_of_week_thursday">목</string>
    <string name="string_fitness_calendar_day_of_week_friday">금</string>
    <string name="string_fitness_calendar_day_of_week_saturday">토</string>
    <string name="string_fitness_calendar_year">년</string>
    <string name="string_fitness_calendar_month">월</string>
    <string name="string_fitness_calendar_day">일</string>
    <string name="string_fitness_calendar_consider">총칼로리/총운동시간</string>
    <string name="string_fitness_calendar_exercise_time">운동시간</string>
    <string name="string_fitness_my_info_title">내 정보</string>
    <string name="string_fitness_slide_menu_welcome_head">안녕하세요 </string>
    <string name="string_fitness_slide_menu_welcome_tail">님!</string>
    <string name="string_fitness_slide_menu_logout">로그아웃</string>
    <string name="string_fitness_slide_menu_connection">기기연결</string>
    <string name="string_fitness_slide_menu_aim_manager">목표관리</string>
    <string name="string_fitness_slide_menu_calendar">운동달력</string>
    <string name="string_fitness_slide_menu_my_info">내 정보</string>
    <string name="string_fitness_slide_menu_test_start">테스트 시작</string>
    <string name="string_fitness_slide_menu_test_end">테스트 종료</string>
    <!-- 강사용 문구 -->
    <string name="string_fitness_trainer_slide_menu_welcome_trainer">안녕하세요 강사님!</string>
    <string name="string_fitness_trainer_slide_menu_user_list">회원 관리</string>
    <string name="string_fitness_trainer_slide_menu_start">운동 시작</string>
    <string name="string_fitness_trainer_slide_menu_end">운동 종료</string>
    <string name="string_fitness_trainer_slide_menu_start_text">운동을 시작해 주세요</string>
    <string name="string_fitness_trainer_slide_menu_end_text">운동을 종료해 주세요</string>
    <string name="string_fitness_trainer_user_list_title">회원 관리</string>
    <string name="string_fitness_trainer_user_name_tail">회원</string>
    <string name="string_fitness_trainer_user_edit_toast">저장되었습니다</string>
    <string name="string_fitness_trainer_register_memeber_title">회원등록</string>
    <string name="string_fitness_trainer_user_edit_title">정보 수정</string>
    <string name="string_fitness_trainer_main_name_column">회원 이름</string>
    <string name="string_fitness_trainer_main_heartrate_column">심박수</string>
    <string name="string_fitness_trainer_main_calorie_column">칼로리</string>
    <string name="string_fitness_trainer_main_skintemperature_column">피부온도</string>
    <string name="string_fitness_trainer_main_state_column">심박 상태</string>
    <string name="string_fitness_trainer_main_device_column">기기명</string>
    <string name="string_fitness_trainer_user_report_graph">실시간 운동정보</string>
    <string name="string_fitness_trainer_user_report_history">히스토리</string>
    <string name="string_fitness_trainer_user_report_state_stop">연결끊김</string>
    <string name="string_fitness_trainer_user_report_state_warm_up_need">준비</string>
    <string name="string_fitness_trainer_user_report_state_warm_up_exceed_aim">초과</string>
    <string name="string_fitness_trainer_user_report_state_warm_up_complete">준비완료</string>
    <string name="string_fitness_trainer_user_report_state_short_aim">미달</string>
    <string name="string_fitness_trainer_user_report_state_exceed_aim">초과</string>
    <string name="string_fitness_trainer_user_report_state_archieve_aim">적정</string>
    <string name="string_fitness_trainer_main_calroie_unit">Kcal</string>
    <string name="string_fitness_trainer_main_temperature_unit">℃</string>
</resources>